<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_a"
            android:layout_width="62dp"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/num_a"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/a_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/hint"
            android:inputType="number|numberDecimal|numberSigned"
            android:textColorHint="#78909C"
            android:textSize="20sp"
            tools:ignore="DuplicateSpeakableTextCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_b"
            android:layout_width="62dp"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/num_b"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/b_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:gravity="start|center_vertical"
            android:hint="@string/hint"
            android:inputType="number|numberDecimal|numberSigned"
            android:textColorHint="#78909C"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_res"
            android:layout_width="81dp"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/res"
            android:textSize="20sp"
            tools:ignore="TextSizeCheck"
            tools:text="Result:" />

        <TextView
            android:id="@+id/result_output"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:gravity="start|center_vertical"
            android:text="@string/result"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="universal_code"
            android:text="@string/btn_add"
            android:textSize="20sp" />

        <Button
            android:id="@+id/sub_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="universal_code"
            android:text="@string/btn_sub"
            android:textSize="20sp"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/div_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="universal_code"
            android:text="@string/btn_div"
            android:textSize="20sp" />

        <Button
            android:id="@+id/mul_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="universal_code"
            android:text="@string/btn_mul"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/pow_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="universal_code"
            android:text="@string/btn_pow"
            android:textSize="20sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/mod_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="universal_code"
            android:text="@string/btn_mod"
            android:textSize="20sp"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_remark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/other_funcs"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sin_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="universal_code"
            android:text="@string/btn_sin"
            android:textSize="20sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/cos_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="universal_code"
            android:text="@string/btn_cos"
            android:textSize="20sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/tan_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="universal_code"
            android:text="@string/btn_tan"
            android:textSize="20sp"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        tools:ignore="UseSwitchCompatOrMaterialXml">

        <Switch
            android:id="@+id/rad_sw"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="123dp"
            android:layout_marginEnd="125dp"
            android:layout_weight="1"
            android:text="@string/sw_rad"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sqrt_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="universal_code"
            android:text="@string/btn_sqrt"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>